base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  labels:
    app: flask-app
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80      
      targetPort: 5000 
  type: ClusterIP
